china-pos/cd/k8s/development/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: development
  name: china-pos
spec:
  replicas: 1
  selector:
    matchLabels:
      resource-namespace: jebsen
      resource-env: development
      resource-name: china-pos
  template:
    metadata:
      namespace: development
      name: china-pos
      labels:
        resource-namespace: jebsen
        resource-env: development
        resource-name: china-pos
    spec:
      containers:
        - name: china-pos
          image: ghcr.io/jebsen-git/china-pos:develop-latest
          args: ["--spring.profiles.active=dev"]
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
        - image: 'busybox:ubuntu-14.04'
          imagePullPolicy: IfNotPresent
          name: busybox
          stdin: true
      imagePullSecrets:
        - name: ghcr-image-pull-credentials
