china-pos/cd/k8s/development/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: development
  name: china-pos
spec:
  selector:
    resource-namespace: jebsen
    resource-env: development
    resource-name: china-pos
  ports:
    - name: http
      targetPort: 8080
      port: 8080
