china-pos/cd/k8s/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: development
  name: china-pos
  annotations:
    konghq.com/plugins: rate-limiting,request-size-limiting,prometheus
    konghq.com/strip-path: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  ingressClassName: kong
  rules:
    - host: servicetest.jebsen.com
      http:
        paths:
          - backend:
              service:
                name: china-pos
                port:
                  name: http
            path: /dev/china-pos
            pathType: ImplementationSpecific
